[metadata]
name = ripda
version = attr: ripda.__version__
url = https://github.com/isakruas/ripda
author = Isak Paulo de Andrade Ruas
author_email = isakruas@gmail.com
description = Ripda Core integration
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Documentation = https://ripda.readthedocs.io/en/latest/
    Source = https://github.com/isakruas/ripda/
    Bug Reports = https://github.com/isakruas/ripda/issues

[options]
python_requires = >=3.10
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    ecutils
    fastapi
    uvicorn[standard]
    sqlmodel
    tqdm
    asyncpg

[options.entry_points]
console_scripts =
    ripda = ripda.core.management:execute_from_command_line

[isort]
profile = black
default_section = THIRDPARTY
known_first_party = ripda
